--- a/app/src/main/res/layout/activity_confima_recuperar.xml
+++ b/app/src/main/res/layout/activity_confima_recuperar.xml
@@ -8,15 +8,39 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="25dp">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
+
+        <TextView
+            android:id="@+id/titulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:text="@string/mensagemEnviada"
+            android:textAlignment="center"
+            android:textColor="@color/textWhite"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/dica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/dica" />
+            android:text="@string/dica"
+            android:textAlignment="center"
+            android:textColor="@color/textWhite"
+            android:textSize="16sp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_hab"
@@ -29,26 +53,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/codigoRecebido"
-                android:textSize="20sp"
-                android:inputType="number" />
+                android:inputType="number"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/botaoConfirmaID"
+                style="@style/btn_white"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
                 android:text="@string/continuar" />
 
             <Button
                 android:id="@+id/botaoReenviarID"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:text="@string/enviarCodigo" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_stroke"
+                android:text="@string/enviarCodigo"
+                android:textColor="@color/textWhite" />
 
         </android.support.design.widget.TextInputLayout>
 
