--- a/app/src/main/res/layout/activity_recuperar_conta.xml
+++ b/app/src/main/res/layout/activity_recuperar_conta.xml
@@ -8,23 +8,41 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="25dp">
 
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
+
         <TextView
             android:id="@+id/titulo"
-            style="@style/headerText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/titulo" />
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/esqueceuSenhaTitulo"
+            android:textAlignment="center"
+            android:textColor="@color/textWhite"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/informativo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/informativo" />
+            android:layout_marginBottom="10dp"
+            android:text="@string/informativo"
+            android:textAlignment="center"
+            android:textColor="@color/textWhite"
+            android:textSize="16sp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_num"
@@ -37,16 +55,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/telefone"
-                android:textSize="20sp"
-                android:inputType="phone" />
+                android:inputType="phone"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/botaoConfirmaID"
+                style="@style/btn_white"
                 android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="15dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
                 android:text="@string/continuar" />
 
         </android.support.design.widget.TextInputLayout>
