--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -113,7 +113,9 @@
                     android:id="@+id/listaPerfilOpcoes"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:divider="@color/transparent" />
+                    android:divider="@color/transparent"
+                    android:clickable="false"
+                    android:alpha=".7"/>
             </LinearLayout>
 
         </LinearLayout>
