--- a/app/src/main/res/xml/pesquisa.xml
+++ b/app/src/main/res/xml/pesquisa.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <searchable xmlns:android="http://schemas.android.com/apk/res/android"
     android:label="@string/app_name"
-    android:hint="string resource"
-    android:searchSuggestAuthority="com.thelearningproject.applogin.infraestrutura.utils.RecentProvider"
-    android:searchSuggestSelection=" ?">
+    android:hint="@string/accept"
+    android:searchSuggestAuthority="com.thelearningproject.applogin.infraestrutura.utils.Provider"
+    android:searchSuggestIntentAction="android.intent.action.VIEW"
+    android:searchSuggestIntentData="content://com.thelearningproject.applogin.infraestrutura.utils.Provider/materias"
+    android:searchSuggestThreshold="1"
+    android:searchSuggestSelection="nome LIKE ?">
+
 
 </searchable>
