--- a/app/src/main/res/layout/lista_perfil.xml
+++ b/app/src/main/res/layout/lista_perfil.xml
@@ -2,17 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:descendantFocusability="blocksDescendants">
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_perfil"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/textBlack"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_perfil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/criarInteracao"
+            android:layout_toStartOf="@+id/criarInteracao"
+            android:text="Luciano Trigueiro"
+            android:textColor="@color/textBlack"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
+        <ImageButton
+            android:id="@+id/criarInteracao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/desfazerInteracao"
+            android:layout_gravity="end"
+            android:background="@color/colorPrimary"
+            android:focusable="false"
+            android:padding="15dp"
+            android:src="@drawable/ic_grade_black_24dp"
+            android:tint="@color/textWhite" />
+
+        <ImageButton
+            android:id="@+id/desfazerInteracao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="end"
+            android:background="@color/colorPrimary"
+            android:focusable="false"
+            android:padding="15dp"
+            android:src="@drawable/ic_star_border_black_24dp"
+            android:tint="@color/textWhite" />
+    </RelativeLayout>
+
 
     <TextView
         android:layout_width="match_parent"
@@ -56,38 +96,25 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/botoesAcao"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="invisible">
 
-        <ImageButton
-            android:id="@+id/criarInteracao"
+        <Button
+            android:id="@+id/aceitarMatchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@color/colorPrimary"
-            android:padding="15dp"
-            android:src="@drawable/ic_grade_black_24dp"
-            android:layout_alignTop="@+id/desfazerInteracao"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:focusable="false"
-            android:onClick="criarInteracao"/>
+            android:text="aceitar" />
 
-        <ImageButton
-            android:id="@+id/desfazerInteracao"
+        <Button
+            android:id="@+id/recusarMatchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="@color/colorPrimary"
-            android:padding="15dp"
-            android:src="@drawable/ic_star_border_black_24dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:focusable="false"
-            android:layout_marginTop="12dp" />
-    </RelativeLayout>
-
+            android:text="recusar" />
+    </LinearLayout>
 
 </LinearLayout>
