--- a/app/src/main/res/menu/pesquisar_menu.xml
+++ b/app/src/main/res/menu/pesquisar_menu.xml
@@ -8,4 +8,10 @@
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"
         />
+    <item
+        android:id="@+id/notificacoesBtn"
+        android:icon="@drawable/ic_notifications_white_24dp"
+        android:title="@string/notificacoes"
+        app:showAsAction="ifRoom|collapseActionView"
+        />
 </menu>
