--- a/app/src/main/res/layout/fragment_main_interacoes.xml
+++ b/app/src/main/res/layout/fragment_main_interacoes.xml
@@ -3,6 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:padding="25dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_vertical"
+        android:textSize="20sp"
+        android:text="@string/nenhumaInteracao"/>
+
     <ListView
         android:id="@+id/listViewInteracoesID"
         android:layout_width="match_parent"
