--- a/app/src/main/res/layout/lista_perfil.xml
+++ b/app/src/main/res/layout/lista_perfil.xml
@@ -100,21 +100,30 @@
         android:id="@+id/botoesAcao"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible">
-
-        <Button
-            android:id="@+id/aceitarMatchBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="false"
-            android:text="aceitar" />
-
-        <Button
+        android:layout_marginTop="20dp"
+        android:gravity="end"
+        android:visibility="gone"
+        >
+        <ImageButton
             android:id="@+id/recusarMatchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginRight="20dp"
             android:focusable="false"
-            android:text="recusar" />
+            android:background="@color/colorError"
+            android:src="@drawable/ic_delete_black_24dp"
+            android:tint="@color/textWhite"/>
+
+        <ImageButton
+            android:id="@+id/aceitarMatchBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:focusable="false"
+            android:background="@color/colorAccent"
+            android:src="@drawable/ic_check_white_24dp"/>
+
     </LinearLayout>
 
 </LinearLayout>
