Remoção de fragment de busca, AJUSTE NO VIEW DO SEARCHVIEW e ajustes nas linhas dos codigos/removendo imports e etc

--- a/app/src/main/res/layout/activity_alterar_email.xml
+++ b/app/src/main/res/layout/activity_alterar_email.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp">
 
-    <EditText
-        android:id="@+id/emailID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/email"
-        android:textSize="22sp"
-        android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/emailID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:textSize="22sp" />
 
     </android.support.design.widget.TextInputLayout>
 
