--- a/app/src/main/res/layout/activity_alterar_senha.xml
+++ b/app/src/main/res/layout/activity_alterar_senha.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/senha"
-            android:textSize="22sp"
-            android:inputType="textVisiblePassword" />
+            android:inputType="textVisiblePassword"
+            android:textSize="22sp" />
     </android.support.design.widget.TextInputLayout>
 
 </android.support.design.widget.CoordinatorLayout>
