--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,100 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="@drawable/gradient"
-	tools:contexto=".usuario.gui.CadastroActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient"
+    tools:contexto=".usuario.gui.CadastroActivity">
 
-<LinearLayout
-	android:layout_width="fill_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:padding="25dp">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="25dp">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="fitXY"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
 
-    <android.support.design.widget.TextInputLayout
-		android:id="@+id/input_layout_nome"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="10dp">
-
-		<EditText
-			android:id="@+id/nomeEntradaID"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:hint="@string/nome"
-			android:inputType="textCapSentences|textPersonName"
-			android:textSize="20sp" />
-
-	</android.support.design.widget.TextInputLayout>
-
-	<android.support.design.widget.TextInputLayout
-		android:id="@+id/input_layout_email"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="10dp">
-
-		<EditText
-			android:id="@+id/emailEntradaID"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:inputType="textEmailAddress"
-			android:hint="@string/email"
-			android:textSize="20sp"/>
-
-	</android.support.design.widget.TextInputLayout>
-
-	<android.support.design.widget.TextInputLayout
-		android:id="@+id/input_layout_senha"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="10dp">
-
-		<EditText
-			android:id="@+id/senhaEntradaID"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:inputType="textPassword"
-			android:hint="@string/senha"
-			android:textSize="20sp" />
-
-	</android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_telefone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-
-        <EditText
-            android:id="@+id/telefoneEntradaID"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_nome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/telefone"
-            android:inputType="phone"
-            android:textSize="20sp" />
+            android:layout_marginTop="10dp">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/nomeEntradaID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/nome"
+                android:inputType="textCapSentences|textPersonName"
+                android:textSize="20sp" />
 
-    <Button
-		android:id="@+id/botaoCadastroID"
-		style="@style/btn_white"
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:paddingLeft="10dp"
-		android:paddingRight="10dp"
-		android:text="@string/cadastrar"
-		android:layout_marginTop="10dp" />
+        </android.support.design.widget.TextInputLayout>
 
-</LinearLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/emailEntradaID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:textSize="20sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_senha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/senhaEntradaID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/senha"
+                android:inputType="textPassword"
+                android:textSize="20sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_telefone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/telefoneEntradaID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/telefone"
+                android:inputType="phone"
+                android:textSize="20sp" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/botaoCadastroID"
+            style="@style/btn_white"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/cadastrar" />
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
