--- a/app/src/main/res/layout/activity_habilidade.xml
+++ b/app/src/main/res/layout/activity_habilidade.xml
@@ -17,10 +17,10 @@
             android:id="@+id/imageView2"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:scaleType="fitXY"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"
-            android:contentDescription="@string/app_name"/>
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
 
         <TextView
             android:id="@+id/necessidade"
@@ -28,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/dica1"
-            android:layout_weight="0.08" />
+            android:layout_weight="0.08"
+            android:text="@string/dica1" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_hab"
@@ -41,9 +41,9 @@
                 android:id="@+id/habilidadeentrada"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
                 android:hint="@string/cadastrarHabilidade"
-                android:textSize="20sp"/>
+                android:inputType="text"
+                android:textSize="20sp" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -52,10 +52,10 @@
             style="@style/btn_white"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="@string/continuar"
-            android:layout_marginTop="30dp" />
+            android:text="@string/continuar" />
 
     </LinearLayout>
 
