--- a/app/src/main/res/layout/activity_termos.xml
+++ b/app/src/main/res/layout/activity_termos.xml
@@ -17,45 +17,46 @@
             android:padding="25dp">
 
             <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/logo"
-                android:scaleType="fitXY"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="29dp"
-                android:id="@+id/imageView2"
-                android:layout_gravity="center_horizontal" />
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitXY"
+                android:src="@drawable/logo" />
 
             <TextView
                 android:id="@+id/textView2"
                 style="@style/dicaCadastro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/texto"
+                android:layout_marginTop="18dp"
                 android:gravity="center"
-                android:textSize="19sp"
-                android:layout_marginTop="18dp"/>
+                android:text="@string/texto"
+                android:textSize="19sp" />
 
             <Button
                 android:id="@+id/botaoContinuar1"
                 style="@style/btn_white"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:textColor="@color/colorPrimary"
                 android:text="@string/continuar"
-                android:textSize="14sp"
-                android:layout_marginTop="20dp" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/theLearnProjectId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/copyright"
-                android:textSize="15sp"
-                android:textColor="@color/textWhite"
                 android:textAlignment="center"
-                android:layout_marginTop="10dp" />
+                android:textColor="@color/textWhite"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
