--- a/app/src/main/res/layout/fragment_main_interacoes.xml
+++ b/app/src/main/res/layout/fragment_main_interacoes.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:padding="25dp"
-        android:gravity="center_horizontal"
         android:layout_gravity="center_vertical"
-        android:textSize="20sp"
-        android:text="@string/nenhumaInteracao"/>
+        android:gravity="center_horizontal"
+        android:padding="25dp"
+        android:text="@string/nenhumaInteracao"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/listViewInteracoesID"
