--- a/app/src/main/res/layout/fragment_main_recomendacoes.xml
+++ b/app/src/main/res/layout/fragment_main_recomendacoes.xml
@@ -8,12 +8,12 @@
         android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:padding="25dp"
-        android:gravity="center_horizontal"
         android:layout_gravity="center_vertical"
-        android:textSize="20sp"
-        android:text="@string/nenhumaRecomendacao"/>
+        android:gravity="center_horizontal"
+        android:padding="25dp"
+        android:text="@string/nenhumaRecomendacao"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/listViewRecomendaID"
