--- a/app/src/main/res/menu/pesquisar_menu.xml
+++ b/app/src/main/res/menu/pesquisar_menu.xml
@@ -3,15 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/pesquisarBtn"
-        android:title="@string/bottom_nav_title2"
         android:icon="@drawable/ic_search_white_24dp"
-        app:showAsAction="ifRoom|collapseActionView"
+        android:title="@string/bottom_nav_title2"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        />
+        app:showAsAction="ifRoom|collapseActionView" />
     <item
         android:id="@+id/notificacoesBtn"
         android:icon="@drawable/ic_notifications_white_24dp"
         android:title="@string/notificacoes"
-        app:showAsAction="ifRoom|collapseActionView"
-        />
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
