--- a/app/src/main/res/menu/salvar_menu.xml
+++ b/app/src/main/res/menu/salvar_menu.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/salvarBtn"
-        android:title="Salvar"
-        app:showAsAction="always"
         android:icon="@drawable/ic_check_white_24dp"
-        />
+        android:title="@string/salvar"
+        app:showAsAction="always" />
 </menu>
