--- a/app/src/main/res/layout/fragment_main_perfil.xml
+++ b/app/src/main/res/layout/fragment_main_perfil.xml
@@ -13,7 +13,7 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/fotoID"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
